RESOLVED FIXED295005
[css-anchor-position-1] anchor-scope fails to scope anchor lookups
https://bugs.webkit.org/show_bug.cgi?id=295005
Summary [css-anchor-position-1] anchor-scope fails to scope anchor lookups
fantasai
Reported 2025-06-25 19:17:10 PDT
Overview: If anchor-scope: --foo; and anchor-name: --foo are set on the same element, we fail to expose the anchor name to descendants of this element. Affected WPT Tests: * http://wpt.live/css/css-anchor-position/anchor-scope-scroll.html Spec Links: * https://www.w3.org/TR/css-anchor-position/#anchor-scope
Attachments
Radar WebKit Bug Importer
Comment 1 2025-06-25 19:22:59 PDT
fantasai
Comment 2 2025-07-09 23:14:22 PDT
Ok, correction: the actual problem is that if an anchor is referenced from within a scope, it still sees anchors from outside the scope. So we correctly hide scoped anchors from outside lookups, but we fail to hide external anchors from inside lookups.
fantasai
Comment 3 2025-07-10 12:20:26 PDT
EWS
Comment 4 2025-07-10 19:37:50 PDT
Committed 297242@main (448f87edcfe9): <https://commits.webkit.org/297242@main> Reviewed commits have been landed. Closing PR #47839 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.