Make anchor-scope scope anchor lookups, not just anchor names https://bugs.webkit.org/show_bug.cgi?id=295005 rdar://154350392

Reviewed by Tim Nguyen.

anchor-scope is supposed to constrain not only the anchor name from escaping
(and being visible outside the scope), but also the anchor lookup from escaping
(and finding things outside the scope).

* LayoutTests/TestExpectations:
Passing test, yay!

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-scope-shadow-all-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-scope-shadow-names-expected.txt:
We don't actually do tree-scoped lookups for anchor-scope, so these results
are incidental. Rebaseline them.

* Source/WebCore/style/AnchorPositionEvaluator.cpp:
(WebCore::Style::anchorScopeForAnchorName):
Update logic.

Canonical link: https://commits.webkit.org/297242@main